--- a/output/html/index.html
+++ b/output/html/index.html
@@ -1,40 +1,39 @@
+<!-- This file lists the available competition summaries by year. Each file represents the date of the competition and contains a summary of the judgment analysis report. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Output Files</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        h1 { color: #333; }
-        ul { list-style-type: none; padding: 0; }
-        li { margin: 5px 0; }
-        a { text-decoration: none; color: #007BFF; }
-        a:hover { text-decoration: underline; }
-    </style>
+    <title>Competition Summaries</title>
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
-    <h1>Available Files by Year</h1>
-    <ul>
-        <li>
-            <h2>2025</h2>
-            <ul>
-                <li><a href="./2025/2025-01-01_summary.html">2025-01-01_summary.html</a></li>
-            </ul>
-        </li>
-        <li>
-            <h2>2024</h2>
-            <ul>
-                <li><a href="./2024/2024-09-28_summary.html">2024-09-28_summary.html</a></li>
-                <li><a href="./2024/2024-05-04_summary.html">2024-05-04_summary.html</a></li>
-                <li><a href="./2024/2024-04-20_summary.html">2024-04-20_summary.html</a></li>
-                <li><a href="./2024/2024-06-08_summary.html">2024-06-08_summary.html</a></li>
-                <li><a href="./2024/2024-11-02_summary.html">2024-11-02_summary.html</a></li>
-                <li><a href="./2024/2024-05-25_summary.html">2024-05-25_summary.html</a></li>
-                <li><a href="./2024/2024-11-16_summary.html">2024-11-16_summary.html</a></li>
-                <li><a href="./2024/2024-overall_summary.html">2024-overall_summary.html</a></li>
-            </ul>
-        </li>
-    </ul>
+    <h1>Competition Summaries</h1>
+    <p>Welcome to the competition summaries page. Here, you can find detailed judgment analysis reports for various competitions, organized by year. Click on a file to view the summary.</p>
+
+    <div class="year-section">
+        <h2>2025</h2>
+        <ul>
+            <li><a href="./2025/2025-01-01_summary.html">January 1, 2025 - Summary</a></li>
+        </ul>
+    </div>
+
+    <div class="year-section">
+        <h2>2024</h2>
+        <ul>
+            <li><a href="./2024/2024-09-28_summary.html">September 28, 2024 - Summary</a></li>
+            <li><a href="./2024/2024-05-04_summary.html">May 4, 2024 - Summary</a></li>
+            <li><a href="./2024/2024-04-20_summary.html">April 20, 2024 - Summary</a></li>
+            <li><a href="./2024/2024-06-08_summary.html">June 8, 2024 - Summary</a></li>
+            <li><a href="./2024/2024-11-02_summary.html">November 2, 2024 - Summary</a></li>
+            <li><a href="./2024/2024-05-25_summary.html">May 25, 2024 - Summary</a></li>
+            <li><a href="./2024/2024-11-16_summary.html">November 16, 2024 - Summary</a></li>
+            <li><a href="./2024/2024-overall_summary.html">2024 Overall Summary</a></li>
+        </ul>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 Competition Analysis Reports. All rights reserved.</p>
+    </footer>
 </body>
 </html>
