--- a/output/html/index.html
+++ b/output/html/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
-    <h1>Competition Summaries</h1>
-    <p>Welcome to the competition summaries page. Here, you can find detailed judgment analysis reports for various competitions, organized by year. Click on a file to view the summary.</p>
+    <h1>SRRC - Judgments analysis</h1>
 
     <div class="year-section">
         <h2>2025</h2>
